registro usaurio avances

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,42 @@
+# Application Configuration
 spring.application.name=open-app
 server.port=8080
-spring.datasource.url=jdbc:postgresql://localhost:5432/springapp_db
-spring.datasource.username=sbsadmin
-spring.datasource.password=Risq_194201
+server.servlet.context-path=/
+
+# Database Configuration - PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/openappv1
+spring.datasource.username=admin_openapp
+spring.datasource.password=risq194201
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA/Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+# Solución temporal para dependencias circulares
+spring.main.allow-circular-references=true
+# HikariCP Connection Pool Settings
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.auto-commit=true
+
+# SQL logging
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
+logging.level.org.springframework.transaction=DEBUG
+
+# Thymeleaf (if you're using it)
+spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.encoding=UTF-8
+
+# File upload settings (important for your photo upload feature)
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
