login terminado-casi

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,16 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/openappv1
 spring.datasource.username=admin_openapp
 spring.datasource.password=risq194201
 spring.datasource.driver-class-name=org.postgresql.Driver
+# Configuración para ver errores en desarrollo
+server.error.include-message=always
+server.error.include-stacktrace=never
+spring.thymeleaf.cache=false
 
+# Para debugging
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web=DEBUG
 # JPA/Hibernate Configuration
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
