--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,11 @@
 	</scm>
 	<properties>
 		<java.version>17</java.version>
+                
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
+        
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -61,6 +65,7 @@
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
+                
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
