aplication.properties desktop

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 spring.application.name=open-app
 server.port=8081
 server.servlet.context-path=/
+server.address=0.0.0.0
 
 # Database Configuration - PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/openappv1
