dashboard arbol funcioonando

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/openappv1
 spring.datasource.username=admin_openapp
 spring.datasource.password=risq194201
 spring.datasource.driver-class-name=org.postgresql.Driver
-# Configuración para ver errores en desarrollo
+# Configuraci\u00c3\u00b3n para ver errores en desarrollo
 server.error.include-message=always
 server.error.include-stacktrace=never
 spring.thymeleaf.cache=false
@@ -23,7 +23,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-# Solución temporal para dependencias circulares
+# Soluci\u00c3\u00b3n temporal para dependencias circulares
 spring.main.allow-circular-references=true
 # HikariCP Connection Pool Settings
 spring.datasource.hikari.connection-timeout=20000
