registros y funciones de editar y borrar arregladas y estables , faklta integrar clase Foto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,23 +8,26 @@ server.address=0.0.0.0
 spring.datasource.url=jdbc:postgresql://localhost:5432/openappv1
 spring.datasource.username=admin_openapp
 spring.datasource.password=risq194201
-spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA/Hibernate Configuration - FORZAR CREACI\u00c3\u0093N DE TABLAS
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+# IMPORTANTE: Defer initialization para que las tablas se creen ANTES de usar los servicios
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+
 # Configuraci\u00c3\u00b3n para ver errores en desarrollo
 server.error.include-message=always
 server.error.include-stacktrace=never
 spring.thymeleaf.cache=false
 
-# Para debugging
-logging.level.org.springframework.security=DEBUG
-logging.level.org.springframework.web=DEBUG
-# JPA/Hibernate Configuration
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 # Soluci\u00c3\u00b3n temporal para dependencias circulares
 spring.main.allow-circular-references=true
+
 # HikariCP Connection Pool Settings
 spring.datasource.hikari.connection-timeout=20000
 spring.datasource.hikari.maximum-pool-size=10
@@ -33,18 +36,18 @@ spring.datasource.hikari.idle-timeout=300000
 spring.datasource.hikari.max-lifetime=1800000
 spring.datasource.hikari.auto-commit=true
 
-# SQL logging
+# SQL logging - ACTIVAR PARA VER LA CREACI\u00c3\u0093N DE TABLAS
 logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type=TRACE
+logging.level.org.hibernate.tool.hbm2ddl=DEBUG
 logging.level.org.springframework.transaction=DEBUG
 
-# Thymeleaf (if you're using it)
+# Thymeleaf
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.encoding=UTF-8
 
-# File upload settings (important for your photo upload feature)
+# File upload settings
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
