configuracion de mensajeria y claude

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,3 +51,26 @@ spring.thymeleaf.encoding=UTF-8
 # File upload settings
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+
+
+#claude
+# AGREGAR ESTAS PROPIEDADES A TU application.properties
+
+# Configuraci\u00f3n de Claude API
+# Para obtener tu API key: https://console.anthropic.com/
+claude.api.key=${CLAUDE_API_KEY:}
+claude.api.url=https://api.anthropic.com/v1/messages
+claude.api.model=claude-3-sonnet-20240229
+claude.api.max-tokens=1000
+
+# Configuraci\u00f3n alternativa para desarrollo (sin API key)
+# claude.api.key=demo-mode
+
+# Otras configuraciones \u00fatiles
+spring.web.cors.allowed-origins=*
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.web.cors.allowed-headers=*
+
+# Para logging de Claude
+logging.level.com.sbs.open_app.servicios.ClaudeService=INFO
