--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,28 @@
 			<groupId>org.thymeleaf.extras</groupId>
 			<artifactId>thymeleaf-extras-springsecurity6</artifactId>
 		</dependency>
+<!-- Agregar estas dependencias a tu pom.xml -->
 
+                <!-- WebSocket Support -->
+                <!-- Spring Messaging -->
+
+                <!-- SockJS (ya incluido en spring-boot-starter-websocket) -->
+                <dependency>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-websocket</artifactId>
+                </dependency>
+
+                <!-- Para manejo de JSON (probablemente ya la tengas) -->
+                <dependency>
+                    <groupId>com.fasterxml.jackson.core</groupId>
+                    <artifactId>jackson-databind</artifactId>
+                </dependency>
+
+                <!-- Opcional: Para validación de datos -->
+                <dependency>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-validation</artifactId>
+                </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
