--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/openappv1
 spring.datasource.username=admin_openapp
 spring.datasource.password=risq194201
 
-# JPA/Hibernate Configuration - FORZAR CREACI\u00c3\u0093N DE TABLAS
+# JPA/Hibernate Configuration - FORZAR CREACI\u00d3N DE TABLAS
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
@@ -20,12 +20,12 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 
-# Configuraci\u00c3\u00b3n para ver errores en desarrollo
+# Configuraci\u00f3n para ver errores en desarrollo
 server.error.include-message=always
 server.error.include-stacktrace=never
 spring.thymeleaf.cache=false
 
-# Soluci\u00c3\u00b3n temporal para dependencias circulares
+# Soluci\u00f3n temporal para dependencias circulares
 spring.main.allow-circular-references=true
 
 # HikariCP Connection Pool Settings
@@ -36,7 +36,7 @@ spring.datasource.hikari.idle-timeout=300000
 spring.datasource.hikari.max-lifetime=1800000
 spring.datasource.hikari.auto-commit=true
 
-# SQL logging - ACTIVAR PARA VER LA CREACI\u00c3\u0093N DE TABLAS
+# SQL logging - ACTIVAR PARA VER LA CREACI\u00d3N DE TABLAS
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.tool.hbm2ddl=DEBUG
 logging.level.org.springframework.transaction=DEBUG
@@ -52,25 +52,61 @@ spring.thymeleaf.encoding=UTF-8
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-
-
-#claude
+#claude - CONFIGURACI\u00d3N EXISTENTE DE CLAUDE
 # AGREGAR ESTAS PROPIEDADES A TU application.properties
-
 # Configuraci\u00f3n de Claude API
 # Para obtener tu API key: https://console.anthropic.com/
 claude.api.key=${CLAUDE_API_KEY:}
 claude.api.url=https://api.anthropic.com/v1/messages
 claude.api.model=claude-3-sonnet-20240229
 claude.api.max-tokens=1000
-
 # Configuraci\u00f3n alternativa para desarrollo (sin API key)
 # claude.api.key=demo-mode
-
 # Otras configuraciones \u00fatiles
 spring.web.cors.allowed-origins=*
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=*
-
 # Para logging de Claude
 logging.level.com.sbs.open_app.servicios.ClaudeService=INFO
+
+# ===================================
+# CONFIGURACI\u00d3N IA LOCAL - OLLAMA (NUEVA)
+# ===================================
+
+# URL del servidor Ollama (ajustar si tienes Ollama en otro puerto/servidor)
+local.ai.ollama.url=http://localhost:11434
+
+# Modelo a utilizar (verificar que est\u00e9 descargado en Ollama)
+# Opciones populares: codellama:7b, codellama:13b, llama2:7b, llama2:13b, mistral:7b
+# =============================================================================
+# CONFIGURACI\u00d3N ACTUALIZADA PARA DEEPSEEK CODER
+# =============================================================================
+
+# Configuraci\u00f3n de IA Local - ACTUALIZADA para tu modelo
+# Agregar estas l\u00edneas a tu application.properties
+local.ai.ollama.url=http://localhost:11434
+# Configuraci\u00f3n de Ollama
+local.ai.ollama.url=http://localhost:11434
+local.ai.model=deepseek-coder-v2:16b
+local.ai.enabled=true
+local.ai.timeout=30000
+
+# Par\u00e1metros del modelo
+local.ai.temperature=0.7
+local.ai.top-p=0.9
+local.ai.top-k=40
+local.ai.max-tokens=2048
+
+# Logging para debug
+logging.level.com.sbs.open_app.service.LocalAIService=INFO
+logging.level.com.sbs.open_app.controller.LocalAIController=INFO
+# Configuraci\u00f3n de logging para IA local
+logging.level.com.sbs.open_app.service.LocalAIService=INFO
+logging.level.com.sbs.open_app.controller.LocalAIController=INFO
+logging.level.com.sbs.open_app.config.LocalAIConfig=INFO
+
+# ===================================
+# CONFIGURACI\u00d3N DE CORS EXTENDIDA PARA IA
+# ===================================
+# Configuraci\u00f3n espec\u00edfica para endpoints de IA
+spring.web.cors.max-age=3600
